Poseguito tutorial fino a 01:02

--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -1,3 +1,10 @@
-<h1>Prova</h1>
+<div class="container">
 
-<router-outlet></router-outlet>
+  <h3 class="d-flex justify-content-center">Swe - PoC - C1 </h3>
+  <h5 class="d-flex justify-content-center">Workstation Management Portal</h5>
+
+
+
+  <router-outlet></router-outlet>
+
+</div>
