--- a/FrontEnd/src/app/workstation/show-workstation/show-workstation.component.html
+++ b/FrontEnd/src/app/workstation/show-workstation/show-workstation.component.html
@@ -1,1 +1,21 @@
-<p>show-workstation works!</p>
+
+
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th>WorkstationID</th>
+      <th>WorkstationName</th>
+      <th>Options</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let dataItem of WorkstationList">
+      <td>{{dataItem.WorkstationID}}</td>
+      <td>{{dataItem.WorkstationName}}</td>
+      <td>
+        <button type="button" class="btn btn-light mr-1">Edit</button>
+        <button type="button" class="btn btn-light mr-1">Delete</button>
+      </td>
+    </tr>
+  </tbody>
+</table>
