--- a/FrontEnd/src/app/workstation/show-workstation/show-workstation.component.html
+++ b/FrontEnd/src/app/workstation/show-workstation/show-workstation.component.html
@@ -1,4 +1,27 @@
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary float-right m-2"
+        data-bs-toggle="modal" data-bs-target="#exampleModal"
+(click)="addClick()" data-keyboard="false">
+  Add workstation
+</button>
 
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">{{ModalTitle}}</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
+        (click)="closeClick()"></button>
+      </div>
+      <div class="modal-body">
+        <!-- Nota bene affinche compili ho rimosso da dentro il tag questa cosa-->
+        <!--  [workstation]="workstation" *ngIf="ActivateAddEditWorkstationComp"-->
+        <app-add-edit-workstation></app-add-edit-workstation>
+      </div>
+    </div>
+  </div>
+</div>
 
 <table class="table table-striped">
   <thead>
