--- a/FrontEnd/src/app/workstation/add-edit-workstation/add-edit-workstation.component.html
+++ b/FrontEnd/src/app/workstation/add-edit-workstation/add-edit-workstation.component.html
@@ -2,19 +2,21 @@
 
   <label class="col-sm-2 col-form-label">Workstation</label>
   <div class="col-sm-10">
-    <input type="text" class="form-control" [(ngModel)]="WorkstationID"
+    <input type="text" class="form-control" [(ngModel)]="WorkstationId"
            placeholder="Enter Workstation ID">
-    <input type="text" class="form-control" [(ngModel)]="WorkstationX"
+    <input type="text" class="form-control" [(ngModel)]="Xposition"
            placeholder="Enter Workstation X">
-    <input type="text" class="form-control" [(ngModel)]="WorkstationY"
+    <input type="text" class="form-control" [(ngModel)]="Yposition"
            placeholder="Enter Workstation Y">
+    <input type="text" class="form-control" [(ngModel)]="Status"
+           placeholder="Enter Status">
   </div>
 </div>
 
-<button (click)="addWorkstation()" *ngIf="workstation.WorkstationID==0" class="btn btn-primary">
+<button (click)="addWorkstation()" *ngIf="workstation.WorkstationId==0" class="btn btn-primary">
   Add
 </button>
 
-<button (click)="updateWorkstation()" *ngIf="workstation.WorkstationID!=0" class="btn btn-primary">
+<button (click)="updateWorkstation()" *ngIf="workstation.WorkstationId!=0" class="btn btn-primary">
   Update
 </button>
