--- a/FrontEnd/src/app/workstation/add-edit-workstation/add-edit-workstation.component.html
+++ b/FrontEnd/src/app/workstation/add-edit-workstation/add-edit-workstation.component.html
@@ -2,6 +2,8 @@
 
   <label class="col-sm-2 col-form-label">Workstation</label>
   <div class="col-sm-10">
+    <input type="text" class="form-control" [(ngModel)]="WorkstationId"
+           placeholder="Enter Workstation ID">
     <input type="text" class="form-control" [(ngModel)]="Xposition"
            placeholder="Enter Workstation X">
     <input type="text" class="form-control" [(ngModel)]="Yposition"
